new code with pulse width

--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,8 @@
   <test_depend>python3-pytest</test_depend>
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>adafruit-circuitpython-pca9685</exec_depend>
+  <exec_depend>adafruit_servokit</exec_depend>
+  <exec_depend>time</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
