--- a/package.xml
+++ b/package.xml
@@ -15,6 +15,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>adafruit_servokit</exec_depend>
   <exec_depend>time</exec_depend>
+  <exec_depend>math</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
