--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>servocontroller</name>
+  <name>n10_servocontroller</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="coroc@buzzmail.eu">christopher</maintainer>
@@ -13,7 +13,7 @@
   <test_depend>python3-pytest</test_depend>
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>adafruit_servokit</exec_depend>
+  <exec_depend>adafruit_pca9685</exec_depend>
   <exec_depend>time</exec_depend>
   <exec_depend>math</exec_depend>
 
